--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -3,9 +3,12 @@
     .navbar
       .navbar-inner
         .container
-          %a.brand{:href => "/"}= current_store.name
+          - if current_store
+            %a.brand{:href => "/"}= current_store.name
+          - else
+            %a.brand{:href => "/"} Shopmazing
           %ul.nav
-            %li= link_to "My Cart", cart_path(current_store, current_cart)
+            -# %li= link_to "My Cart", cart_path(current_store, current_cart)
             - if current_user  
               %li
                 / %p Welcome #{current_user.full_name}
@@ -14,5 +17,5 @@
             - else
               %li= link_to "Log In", new_session_path
               %li= link_to "Sign Up", new_user_path
-            - if current_cart.line_items.count > 0
+            - if current_store && current_cart && current_cart.line_items.count > 0
               %li= link_to "Check Out", checkout_path(current_store), :method => :get, :class => "primary-link"
