--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -495,7 +495,7 @@ body {
 }
 .widget {
   background: #fff;
-  padding: 2em 1.3em 2em 1.3em;
+  padding: 2em 2.1em 2em 2.1em;
   border-radius: 3px;
   box-shadow: 0px 0px 5px #d4d4d4;
 }
@@ -503,7 +503,7 @@ body {
   text-align: center;
   font-family: 'Questrial', sans-serif;
   margin-top: 0;
-  color: #848484;
+  color: #666;
 }
 .widget-count {
   font-weight: normal;
@@ -732,6 +732,7 @@ p.form-light {
 }
 #admin-tabs {
   list-style-type: none;
+  margin-left: 0;
 }
 #admin-tabs li {
   float: left;
@@ -744,4 +745,19 @@ p.form-light {
 #admin-tabs li.active {
   background: #fff;
   box-shadow: 10px 9px 5px -9px #d4d4d4;
+}
+#admin-tabs li a {
+  color: #005580 !important;
+}
+#admin-tabs li a:hover {
+  background: none;
+}
+.widget-online {
+  color:#266236; 
+}
+.widget-pending {
+  color:#f3b010; 
+}
+.widget-declined {
+  color: #b63030; 
 }
