--- a/app/views/admin/stores/_pending_stores_table.html.haml
+++ b/app/views/admin/stores/_pending_stores_table.html.haml
@@ -6,13 +6,13 @@
           %th.span2 Store Name
           %th.span2 Store Path
           %th.span4 Description
-          %th.span4 Admin Action
+          %th.span4 Actions
       %tbody
         - stores.each do |store|
           %tr
             %td= store.name
             %td= store.path
-            %td= truncate(store.description, length: 32)
+            %td= truncate(store.description.capitalize, length: 32)
             %td
               - if store.status == "pending"
                 = link_to "Approve", admin_store_path(store, {store_id: store.id, toggle: "approve"}), method: :put
