--- a/app/views/store_admin/products/index.html.haml
+++ b/app/views/store_admin/products/index.html.haml
@@ -1,44 +1,99 @@
-- provide(:title, 'Admin Product List')
-.row-fluid
-  .span12
-    .page-header
-      %h1 Administration Portal
+- provide(:title, 'Admin Dashboard')
+%section#right-pane
+  .row.admin-header
+    .span10
+      %h2 
+        = "Welcome, #{current_user.full_name}"
+      %a.admin-primary-button{:href => "#"}
+        View Your Store
+  %section.dashboard
+    .row
+      .span2.widget
+        %h4 Pending
+        %h2.widget-count
+          - pending = []
+          - @orders.each do |order|
+            - if order.current_status == "pending"
+              - pending << order
+          = pending.count
+      .span2.widget
+        %h4 Shipped
+        %h2.widget-count
+          - shipped = []
+          - @orders.each do |order|
+            - if order.current_status == "shipped"
+              - shipped << order
+          = shipped.count
+      .span2.widget
+        %h4 Paid
+        %h2.widget-count
+          - paid = []
+          - @orders.each do |order|
+            - if order.current_status == "paid"
+              - paid << order
+          = paid.count
+      .span2.widget
+        %h4 Cancelled
+        %h2.widget-count
+          - cancelled = []
+          - @orders.each do |order|
+            - if order.current_status == "cancelled"
+              - cancelled << order
+          = cancelled.count      
+      .span2.widget
+        %h4 Returned
+        %h2.widget-count
+          - returned = []
+          - @orders.each do |order|
+            - if order.current_status == "returned"
+              - returned << order
+          = returned.count
 
-.row-fluid
-  .tabbable
-    %ul.nav.nav-tabs
-      %li
-        = link_to "Dashboard", store_admin_path
-      %li
-        = link_to "Past Orders", store_admin_orders_path
-      %li.active
-        = link_to "Manage Products", store_admin_products_path
-      %li
-        = link_to "Manage Categories", store_admin_categories_path
-      %li
-        = link_to "Manage Admins", "#"
+  %ul#admin-tabs
+    %li.dashboard.active
+      = link_to "Dashboard", store_admin_path
+    %li.orders
+      = link_to "Past Orders", store_admin_orders_path
+    %li.products
+      = link_to "Manage Products", store_admin_products_path
+    %li.categories
+      = link_to "Manage Categories", store_admin_categories_path
+    %li
+      = link_to "Manage Admins", "#"
 
-.row-fluid
-  .span12
-    .span6
-      %h3 Products
-    .span6.header-button
-      = button_to "Add New Product", new_store_admin_product_path(current_store), method: :get, :class => "btn pull-right"
+  :javascript
+    $(document).ready(function(){
+      var something = window.location.toString().split('/')[5];
+      if (something != null) {
+        $('.' + something).addClass('active');
+        $('.dashboard').removeClass('active');
+      }
+    })
+
 .row-fluid
   .span12
     %table.table.table-striped.table-bordered.cart-detail
       %thead
         %tr
-          %th.span1 Product
-          %th.span3 Title
-          %th.span4 Description
-          %th.span2 Price
-          %th.span2 Action
+          %th.span2 Order Number
+          %th.span3 Date Ordered
+          %th.span2 Order Total
+          %th.span2 Status
+          %th.span3 Change Status To:
       %tbody
-        - @products.each do |product|
+        - @orders.each do |order|
           %tr
-            %td= image_tag product.photo.url
-            %td= product.title
-            %td= product.description
-            %td= number_to_currency(product.price_in_dollars)
-            %td= link_to "edit", edit_store_admin_product_path(current_store, product)
+            %td
+              = link_to order.id, store_admin_order_path(order.store, order)
+            %td= (order.created_at).to_date.strftime("%B %-d, %Y")
+            %td= number_to_currency(order.total_price)
+            %td= order.current_status
+            %td
+              - if order.current_status == "pending"
+                = link_to "Cancel", store_admin_order_path(order.store, order), :method => :put
+              - elsif order.current_status == "shipped"
+                = link_to "Mark as returned", store_admin_order_path(order.store, order), :method => :put
+              - elsif order.current_status == "paid"
+                = link_to "Mark as shipped", store_admin_order_path(order.store, order), :method => :put
+              - else
+                = "N/A"
