admin styles mostly done

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -438,7 +438,8 @@ body {
   background: #28b8df;
 }
 .admin-primary-button {
-  float: right;
+  text-align: center;
+  float: none;
   display: block;
   background: #ede483;
   margin-top: .4em;
@@ -455,6 +456,9 @@ body {
 .admin-primary-button:hover {
   text-decoration: none;
   background: #28b8df;
+}
+.admin-cta {
+  margin-top: 2em;
 }
 .admin-brand {
   margin-top: .5em;
@@ -485,7 +489,7 @@ body {
 }
 #right-pane {
   margin-left: 19em;
-  margin-top: .9em;
+  margin-top: -47px !important;
 }
 .admin-header h2 {
   float: left;
@@ -726,9 +730,12 @@ p.form-light {
   clear: left;
   margin-left: 0;
   background: #fff;
-  padding: 3em;
+  padding: 4.3em;
   border-radius: 3px;
   box-shadow: 10px 9px 5px -9px #d4d4d4;
+}
+#admin-tab table {
+  margin-top: 1em;
 }
 #admin-tabs {
   list-style-type: none;
