--- a/app/views/store_admin/categories/index.html.haml
+++ b/app/views/store_admin/categories/index.html.haml
@@ -1,11 +1,9 @@
 - provide(:title, 'Admin Dashboard')
 %section#right-pane
   .row.admin-header
-    .span10
+    .span12
       %h2 
         = "Welcome, #{current_user.full_name}"
-      %a.admin-primary-button{:href => "#"}
-        View Your Store
   %section.dashboard
     .row
       .span2.widget
@@ -53,13 +51,13 @@
     %li.dashboard.active
       = link_to "Dashboard", store_admin_path
     %li.orders
-      = link_to "Past Orders", store_admin_orders_path
+      = link_to "Orders", store_admin_orders_path
     %li.products
-      = link_to "Manage Products", store_admin_products_path
+      = link_to "Products", store_admin_products_path
     %li.categories
-      = link_to "Manage Categories", store_admin_categories_path
+      = link_to "Categories", store_admin_categories_path
     %li
-      = link_to "Manage Admins", "#"
+      =link_to "Admins", store_admin_members_path(current_store)
 
   :javascript
     $(document).ready(function(){
@@ -70,30 +68,17 @@
       }
     })
 
-.row-fluid
-  .span12
+  #admin-tab.span12
     %table.table.table-striped.table-bordered.cart-detail
       %thead
         %tr
-          %th.span2 Order Number
-          %th.span3 Date Ordered
-          %th.span2 Order Total
-          %th.span2 Status
-          %th.span3 Change Status To:
+          %th.span7 Name
+          %th.span5 Action
       %tbody
-        - @orders.each do |order|
+        - @categories.each do |category|
           %tr
+            %td= category.name
             %td
-              = link_to order.id, store_admin_order_path(order.store, order)
-            %td= (order.created_at).to_date.strftime("%B %-d, %Y")
-            %td= number_to_currency(order.total_price)
-            %td= order.current_status
-            %td
-              - if order.current_status == "pending"
-                = link_to "Cancel", store_admin_order_path(order.store, order), :method => :put
-              - elsif order.current_status == "shipped"
-                = link_to "Mark as returned", store_admin_order_path(order.store, order), :method => :put
-              - elsif order.current_status == "paid"
-                = link_to "Mark as shipped", store_admin_order_path(order.store, order), :method => :put
-              - else
-                = "N/A"
+              = link_to "Edit", edit_store_admin_category_path(current_store, category)
+              |
+              = link_to "Delete", store_admin_category_path(current_store, category), method: :delete, data: { confirm: 'Are you sure?' }
