--- a/app/views/store_admin/categories/new.html.haml
+++ b/app/views/store_admin/categories/new.html.haml
@@ -10,13 +10,13 @@
       %li
         = link_to "Dashboard", store_admin_path
       %li
-        = link_to "Past Orders", store_admin_orders_path
+        = link_to "Orders", store_admin_orders_path
       %li
-        = link_to "Manage Products", store_admin_products_path
+        = link_to "Products", store_admin_products_path
       %li.active
-        = link_to "Manage Categories", store_admin_categories_path
+        = link_to "Categories", store_admin_categories_path
       %li
-        = link_to "Manage Admins", "#"
+        =link_to "Admins", store_admin_members_path(current_store)
 
 .row-fluid
   .span12
