--- a/app/views/store_admin/dashboards/show.html.haml
+++ b/app/views/store_admin/dashboards/show.html.haml
@@ -1,11 +1,9 @@
 - provide(:title, 'Admin Dashboard')
 %section#right-pane
   .row.admin-header
-    .span10
+    .span12
       %h2 
         = "Welcome, #{current_user.full_name}"
-      %a.admin-primary-button{:href => "#"}
-        View Your Store
   %section.dashboard
     .row
       .span2.widget
@@ -53,13 +51,13 @@
     %li.dashboard.active
       = link_to "Dashboard", store_admin_path
     %li.orders
-      = link_to "Past Orders", store_admin_orders_path
+      = link_to "Orders", store_admin_orders_path
     %li.products
-      = link_to "Manage Products", store_admin_products_path
+      = link_to "Products", store_admin_products_path
     %li.categories
-      = link_to "Manage Categories", store_admin_categories_path
+      = link_to "Categories", store_admin_categories_path
     %li
-      = link_to "Manage Admins", "#"
+      =link_to "Admins", store_admin_members_path(current_store)
 
   :javascript
     $(document).ready(function(){
@@ -70,8 +68,7 @@
       }
     })
 
-.row-fluid
-  .span12
+  #admin-tab.span12
     %table.table.table-striped.table-bordered.cart-detail
       %thead
         %tr
