--- a/app/views/store_admin/members/new.html.haml
+++ b/app/views/store_admin/members/new.html.haml
@@ -16,7 +16,7 @@
       %li
         = link_to "Manage Categories", store_admin_categories_path
       %li
-        = link_to "Manage Admins", "#"
+        = link_to "Manage Admins", store_admin_members_path
 
 = simple_form_for :invite, :url => store_admin_members_path do |f|
   = f.error_notification 
