--- a/app/views/store_admin/stores/edit.html.haml
+++ b/app/views/store_admin/stores/edit.html.haml
@@ -23,7 +23,7 @@
     = f.error_notification
     = f.input :name
     = f.input :path
-    = f.input :description
+    = f.input :description, as: :text
     = f.error :base
     %div
       = f.button :submit, :value => "Update Store", :class => "btn-primary"
