--- a/app/views/store_admin/members/index.html.haml
+++ b/app/views/store_admin/members/index.html.haml
@@ -39,8 +39,7 @@
             %td= admin.full_name
             %td= admin.email
             %td Admin
-            %td= link_to "Remove", "#"
-
+            %td= link_to "Remove", store_admin_member_path(current_store, current_store.id, user: admin.id), method: :delete, data: { confirm: 'Are you sure?' }
 %br
 %br
 
