--- a/app/views/shared/_admin_navbar.html.haml
+++ b/app/views/shared/_admin_navbar.html.haml
@@ -14,5 +14,7 @@
             =link_to 'Categories', store_admin_categories_path(current_store), class: "admin_header_link categories"
           %li
             =link_to 'Admins', store_admin_members_path(current_store), class: "admin_header_link members"
-        %a.admin-primary-button.admin-cta{:href => "#"}
-          View Your Store
+          %li
+            =link_to 'Settings', "#", class: "admin_header_link settings"
+        
+        =link_to "View Your Store", store_home_path(current_store), class: "admin-primary-button admin-cta"
