--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,5 +1,7 @@
-%p Check out one of the stores on our platform
-- @stores.each do |store|
-  %li
-    = link_to store.name, store_home_path(store) 
+=image_tag "http://i.imgur.com/IIyIfJs.png", class: "shrink_mac"
+%h3.splash-heading Powerful New Reports
+/ %p Check out one of the stores on our platform
+/ - @stores.each do |store|
+/   %li
+/     = link_to store.name, store_home_path(store) 
 
