fixed some slight issues with the product show page

--- a/app/views/stores/obigear_index.html.haml
+++ b/app/views/stores/obigear_index.html.haml
@@ -21,7 +21,7 @@
       %li.span3
         .thumbnail
           = link_to product_path(product) do
-            = image_tag product.photo.url
+            = image_tag product.photo_url
           .caption
             %h5
               = product.title
