--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -585,6 +585,7 @@ body {
   float: none;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3em;
 }
 .single-form h4 {
   text-transform: uppercase;
