--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -25,7 +25,7 @@
           - if line_item.quantity > 0
             %tr
               %td
-                = image_tag line_item.product.photo.url
+                = image_tag line_item.product.photo_url
               %td.description
                 %span.name
                   = link_to line_item.product.title, product_path(line_item.product)
