--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -22,7 +22,7 @@
           %li.span3
             .thumbnail
               = link_to product_path(product) do
-                = image_tag product.photo.url
+                = image_tag product.photo_url
               .caption
                 %p= link_to product.title, product_path(product)
                 %p= number_to_currency(product.price_in_dollars)
