--- a/app/views/orders/show_guest_order.html.haml
+++ b/app/views/orders/show_guest_order.html.haml
@@ -37,7 +37,7 @@
         - @order.line_items.each do |line_item|
           %tr
             %td
-              = image_tag line_item.product.photo.url
+              = image_tag line_item.product.photo_url
             %td.description
               %span.name
                 = link_to line_item.product.title, product_path(line_item.product, line_item)
