--- a/app/views/store_admin/products/index.html.haml
+++ b/app/views/store_admin/products/index.html.haml
@@ -80,7 +80,7 @@
       %tbody
         - @products.each do |product|
           %tr
-            %td= image_tag product.photo.url
+            %td= image_tag product.photo_url
             %td= product.title
             %td= product.description
             %td= number_to_currency(product.price_in_dollars)
