more styles for all pages

--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -1,37 +1,48 @@
-.row-fluid
-  %ul.breadcrumb
-    %li
-      = link_to "Home", "/"
-      %span.divider /
-    %li.active
-      My Account
-.row-fluid
-  .tabbable
-    %ul.nav.nav-tabs
+%section#right-pane
+  .row.admin-header
+    .span11
+      %h2 
+        = "Welcome, #{current_user.full_name}"
+
+  %ul#admin-tabs
+    %li.profile
+      = link_to "Profile", profile_path
+    %li.orders.active
+      = link_to "Purchases", profile_orders_path
+    - if current_user.stores.count > 0
       %li
-        = link_to "Profile", profile_path
-      %li.active
-        = link_to "Past Purchases", profile_orders_path
-.row-fluid
-  .span12
-    %table.table.table-striped.table-bordered.cart-detail
-      %thead
-        %tr
-          %th.span2 Order Number
-          %th.span2 Store
-          %th.span3 Date Ordered
-          %th.span2 Order Total
-          %th.span3 Status
-      %tbody
-        - @orders.each do |order|
-          %tr
-            %td
-              = link_to order.id, order_path(order.store, order)
-            %td
-              = order.store.name
-            %td
-              = (order.created_at).to_date.strftime("%B %-d, %Y")
-            %td
-              = number_to_currency(order.total_price)
-            %td
-              = order.current_status
+        =link_to 'Stores', stores_path, class: "admin_header_link products"
+
+  :javascript
+    $(document).ready(function(){
+      var something = window.location.toString().split('/')[5];
+      if (something != null) {
+        $('.' + something).addClass('active');
+        $('.dashboard').removeClass('active');
+      }
+    })
+
+  #admin-tab.span12
+    .row-fluid
+      .span12
+        %table.table.table-striped.table-bordered.cart-detail
+          %thead
+            %tr
+              %th.span2 Order Number
+              %th.span2 Store
+              %th.span3 Date Ordered
+              %th.span2 Order Total
+              %th.span3 Status
+          %tbody
+            - @orders.each do |order|
+              %tr
+                %td
+                  = link_to order.id, order_path(order.store, order)
+                %td
+                  = order.store.name
+                %td
+                  = (order.created_at).to_date.strftime("%B %-d, %Y")
+                %td
+                  = number_to_currency(order.total_price)
+                %td
+                  = order.current_status
