--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,8 @@
     %title= full_title(yield(:title))
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
     = stylesheet_link_tag    "application", "http://fonts.googleapis.com/css?family=Questrial|Damion"
-    = javascript_include_tag "https://js.stripe.com/v1/",  "application"
+    = javascript_include_tag "application"
     = csrf_meta_tags
-    = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
   %body
     = render :partial => "shared/navbar"
 
