--- a/app/views/admin/stores/_approved_stores_table.html.haml
+++ b/app/views/admin/stores/_approved_stores_table.html.haml
@@ -16,7 +16,7 @@
             %td= store.path.capitalize
             %td= truncate(store.description.capitalize, length: 32)
             %td
-              %a{:href => "#"} Administer
+              =link_to "Administer", store_admin_path(store)
             %td= store.status.titleize
             %td
               -if store.status == "online"
