--- a/app/views/shared/_hero_unit.html.haml
+++ b/app/views/shared/_hero_unit.html.haml
@@ -1,7 +1,8 @@
-%section
-  .hero-unit
-    .primary-message
-      %h2 Sell Your Products Online
-      %h3 without the hassle.
-    %a.primary-button.between-sections{:href => new_user_path}
-      Sign Up To Create Your Free Shopmazing Store
+-cache ("heroUnit") do
+  %section
+    .hero-unit
+      .primary-message
+        %h2 Sell Your Products Online
+        %h3 without the hassle.
+      %a.primary-button.between-sections{:href => new_user_path}
+        Sign Up To Create Your Free Shopmazing Store
