--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,6 +1,7 @@
 -cache ("hero-unit-et-al") do
   =image_tag "http://i.imgur.com/IIyIfJs.png", class: "shrink_mac"
-  %h3.splash-heading Powerful New Reports
+  %h3.splash-heading Coming Soon: Powerful New Reports
+  %h4.splash-heading Flexible Platform | Actionable Data
   / %p Check out one of the stores on our platform
   / - @stores.each do |store|
   /   %li
