--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -1,4 +1,5 @@
-= simple_form_for @user do |f|
-  = f.error_notification
-  = f.input :phone
-  = f.input :receive_sms
+-cache ("users#_form") do
+  = simple_form_for @user do |f|
+    = f.error_notification
+    = f.input :phone
+    = f.input :receive_sms
