--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -56,7 +56,8 @@
           %td.span8
           %td.span2 Total
           %td.span2= number_to_currency(@cart.total_price)
-  .pull-left
-    = button_to "Continue Shopping", products_path(current_store), :method => :get, :class => "btn"
-  .pull-right
-    = button_to "Checkout", checkout_path(current_store), :method => :get, :class => "btn btn-inverse"
+  -cache("carts#show_buttons")
+    .pull-left
+      = button_to "Continue Shopping", products_path(current_store), :method => :get, :class => "btn"
+    .pull-right
+      = button_to "Checkout", checkout_path(current_store), :method => :get, :class => "btn btn-inverse"
