--- a/app/views/shared/_admin_navbar.html.haml
+++ b/app/views/shared/_admin_navbar.html.haml
@@ -1,20 +1,21 @@
-%header.admin-header
-  .navbar.navbar-fixed-left
-    .navbar
-      .navbar-inner
-        %a.brand.admin-brand{:href => "#"} Shopmazing
-        %ul#admin-menu
-          %li
-            =link_to 'Dashboard', store_admin_path(current_store), class: "admin_header_link dashboard active"
-          %li
-            =link_to 'Orders', store_admin_orders_path(current_store), class: "admin_header_link orders"
-          %li
-            =link_to 'Products', store_admin_products_path(current_store), class: "admin_header_link products"
-          %li
-            =link_to 'Categories', store_admin_categories_path(current_store), class: "admin_header_link categories"
-          %li
-            =link_to 'Admins', store_admin_members_path(current_store), class: "admin_header_link members"
-          %li
-            =link_to 'Settings', "#", class: "admin_header_link settings"
-        
-        =link_to "View Your Store", store_home_path(current_store), class: "admin-primary-button admin-cta"
+-cache ("adminNav") do
+  %header.admin-header
+    .navbar.navbar-fixed-left
+      .navbar
+        .navbar-inner
+          %a.brand.admin-brand{:href => "#"} Shopmazing
+          %ul#admin-menu
+            %li
+              =link_to 'Dashboard', store_admin_path(current_store), class: "admin_header_link dashboard active"
+            %li
+              =link_to 'Orders', store_admin_orders_path(current_store), class: "admin_header_link orders"
+            %li
+              =link_to 'Products', store_admin_products_path(current_store), class: "admin_header_link products"
+            %li
+              =link_to 'Categories', store_admin_categories_path(current_store), class: "admin_header_link categories"
+            %li
+              =link_to 'Admins', store_admin_members_path(current_store), class: "admin_header_link members"
+            %li
+              =link_to 'Settings', "#", class: "admin_header_link settings"
+          
+          =link_to "View Your Store", store_home_path(current_store), class: "admin-primary-button admin-cta"
