--- a/app/views/shared/_super_admin_navbar.html.haml
+++ b/app/views/shared/_super_admin_navbar.html.haml
@@ -1,15 +1,16 @@
-%header.admin-header
-  .navbar.navbar-fixed-left
-    .navbar
-      .navbar-inner
-        %a.brand.admin-brand{:href => "#"} Shopmazing
-        %ul#admin-menu
-          %li
-            %a.active{:href => "#"}
-              Dashboard
-          %li
-            %a{:href => "#"}
-              Orders
-          %li
-            %a{:href => "#"}
-              Products
+-cache ("superAdmin") do
+  %header.admin-header
+    .navbar.navbar-fixed-left
+      .navbar
+        .navbar-inner
+          %a.brand.admin-brand{:href => "#"} Shopmazing
+          %ul#admin-menu
+            %li
+              %a.active{:href => "#"}
+                Dashboard
+            %li
+              %a{:href => "#"}
+                Orders
+            %li
+              %a{:href => "#"}
+                Products
